--- a/index.html
+++ b/index.html
@@ -3,107 +3,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Política de Privacidad - EGS App</title>
+    <title>Políticas de Privacidad - Alfa</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            max-width: 800px;
+            max-width: 900px;
             margin: 0 auto;
             padding: 20px;
-        }
-        h1, h2 {
             color: #333;
+        }
+        h1, h2, h3 {
+            color: #2c3e50;
+            margin-top: 1.5em;
         }
         .section {
             margin-bottom: 30px;
         }
+        ul, ol {
+            padding-left: 20px;
+        }
+        .subsection {
+            margin-left: 20px;
+        }
+        .update-date {
+            color: #666;
+            font-style: italic;
+        }
+        .contact-info {
+            background-color: #f8f9fa;
+            padding: 15px;
+            border-radius: 5px;
+            margin: 20px 0;
+        }
+        .important {
+            background-color: #fff3cd;
+            padding: 15px;
+            border-radius: 5px;
+            margin: 10px 0;
+        }
     </style>
 </head>
 <body>
-    <h1>Política de Privacidad - EGS App</h1>
-    <p>Última actualización: 21 de enero de 2025</p>
+    <h1>Políticas de Privacidad</h1>
+    <p class="update-date">Última actualización: 6/12/2024</p>
 
     <div class="section">
-        <h2>1. Información General</h2>
-        <p>Esta Política de Privacidad describe cómo VIEM Corp ("nosotros", "nuestra", "EGS") recopila, utiliza y protege la información que usted proporciona cuando utiliza nuestra aplicación móvil EGS App ("la Aplicación").</p>
+        <h2>1. Introducción</h2>
+        <p>En Alfa, estamos comprometidos con la protección de la privacidad de nuestros usuarios. Esta política de privacidad detalla cómo recopilamos, utilizamos y protegemos la información personal que nos proporcionas al utilizar nuestra aplicación, en cumplimiento con el Reglamento General de Protección de Datos (GDPR) y la Ley de Privacidad del Consumidor de California (CCPA).</p>
     </div>
 
     <div class="section">
-        <h2>2. Información que Recopilamos</h2>
-        <p>Recopilamos los siguientes tipos de información:</p>
-        <ul>
-            <li>Información de identificación personal (nombre, correo electrónico)</li>
-            <li>Datos de autenticación y seguridad</li>
-            <li>Datos de uso de la aplicación</li>
-            <li>Información del dispositivo</li>
-            <li>Datos de análisis y rendimiento</li>
-        </ul>
+        <h2>2. Categorías de Datos Personales</h2>
+        <p>Alfa recopila y procesa las siguientes categorías de datos personales:</p>
+
+        <div class="subsection">
+            <h3>A. Identificadores Personales</h3>
+            <ul>
+                <li>Nombre (solo para sugerencias, mejoras y comentarios)</li>
+                <li>Dirección de correo electrónico (solo para sugerencias, mejoras y comentarios)</li>
+            </ul>
+
+            <h3>B. Datos Biométricos</h3>
+            <ul>
+                <li>Imagen facial temporal (solo para validación de sexo, no almacenada)</li>
+            </ul>
+
+            <h3>C. Datos de Comunicación</h3>
+            <ul>
+                <li>Contenido de mensajes y sugerencias enviadas</li>
+                <li>Registros de comunicación con soporte</li>
+            </ul>
+
+            <h3>D. Datos Técnicos</h3>
+            <ul>
+                <li>Permisos de dispositivo (acceso a cámara)</li>
+                <li>Información del dispositivo necesaria para el funcionamiento de la app</li>
+            </ul>
+
+            <h3>E. Datos de Uso</h3>
+            <ul>
+                <li>Interacciones con la aplicación</li>
+                <li>Preferencias de usuario</li>
+            </ul>
+
+            <h3>F. Información del Dispositivo</h3>
+            <p>Recopilamos automáticamente cierta información sobre tu dispositivo, incluyendo:</p>
+            <ul>
+                <li>Identificador único del dispositivo (Device ID)</li>
+                <li>Sistema operativo y versión</li>
+                <li>Modelo del dispositivo</li>
+                <li>Idioma del dispositivo</li>
+                <li>Zona horaria</li>
+            </ul>
+        </div>
     </div>
 
     <div class="section">
-        <h2>3. Cómo Utilizamos su Información</h2>
-        <p>Utilizamos la información recopilada para:</p>
-        <ul>
-            <li>Proporcionar y mantener nuestros servicios</li>
-            <li>Mejorar y personalizar la experiencia del usuario</li>
-            <li>Procesar transacciones y autenticaciones</li>
-            <li>Enviar notificaciones importantes sobre el servicio</li>
-            <li>Analizar el rendimiento y uso de la aplicación</li>
-        </ul>
+        <h2>3. Propósitos del Procesamiento de Datos</h2>
+        <div class="subsection">
+            <h3>A. Identificadores Personales</h3>
+            <p>Propósitos:</p>
+            <ul>
+                <li>Gestión y seguimiento de sugerencias y comentarios</li>
+                <li>Comunicación directa para responder a consultas del usuario</li>
+                <li>Atención al usuario y soporte técnico</li>
+            </ul>
+            <p>Base legal: Consentimiento explícito del usuario</p>
+
+            <!-- Continuar con los demás propósitos... -->
+        </div>
+    </div>
+
+    <!-- Continuar con las demás secciones... -->
+
+    <div class="section">
+        <h2>12. Información de Contacto</h2>
+        <div class="contact-info">
+            <p>Para ejercer tus derechos de privacidad o realizar consultas sobre el tratamiento de tus datos personales, puedes contactarnos a través de:</p>
+            <p><strong>Correo Electrónico:</strong> alfa.viem.corp@gmail.com</p>
+        </div>
     </div>
 
     <div class="section">
-        <h2>4. Compartir Información con Terceros</h2>
-        <p>Compartimos información con:</p>
-        <ul>
-            <li>Proveedores de servicios (Firebase para autenticación y almacenamiento)</li>
-            <li>Servicios de análisis (Firebase Analytics)</li>
-            <li>Autoridades cuando sea requerido por ley</li>
-        </ul>
+        <h2>13. Autoridades de Control</h2>
+        <p>Tienes derecho a presentar una reclamación ante la autoridad de control de protección de datos competente si consideras que el tratamiento de tus datos personales infringe la normativa aplicable.</p>
     </div>
 
     <div class="section">
-        <h2>5. Seguridad de Datos</h2>
-        <p>Implementamos medidas de seguridad técnicas y organizativas apropiadas para proteger sus datos, incluyendo:</p>
-        <ul>
-            <li>Encriptación de datos en tránsito y en reposo</li>
-            <li>Acceso restringido a datos personales</li>
-            <li>Monitoreo regular de sistemas de seguridad</li>
-            <li>Procedimientos de respuesta a incidentes</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>6. Retención y Eliminación de Datos</h2>
-        <p>Mantenemos sus datos personales solo durante el tiempo necesario para los fines establecidos en esta política. Puede solicitar la eliminación de sus datos en cualquier momento.</p>
-    </div>
-
-    <div class="section">
-        <h2>7. Sus Derechos</h2>
-        <p>Usted tiene derecho a:</p>
-        <ul>
-            <li>Acceder a sus datos personales</li>
-            <li>Corregir datos inexactos</li>
-            <li>Solicitar la eliminación de sus datos</li>
-            <li>Oponerse al procesamiento de sus datos</li>
-            <li>Solicitar la portabilidad de sus datos</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>8. Contacto</h2>
-        <p>Para cualquier consulta relacionada con esta política de privacidad o el tratamiento de sus datos personales, puede contactarnos en:</p>
-        <ul>
-            <li>Email: privacy@viemcorp.com</li>
-            <li>Dirección: [Dirección física de la empresa]</li>
-            <li>Teléfono: [Número de contacto]</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>9. Cambios en la Política de Privacidad</h2>
-        <p>Nos reservamos el derecho de actualizar esta política de privacidad en cualquier momento. Las modificaciones entrarán en vigor inmediatamente después de su publicación en la aplicación.</p>
+        <h2>14. Ley aplicable</h2>
+        <p>Esta Política de Privacidad se rige por las leyes de Ecuador, el GDPR de la Unión Europea y la CCPA de California, según corresponda. Cualquier disputa relacionada con el manejo de la información personal será resuelta conforme a estas leyes.</p>
     </div>
 </body>
 </html>
